# llm-analysis

./: .gitignore  README.md  app.py  config.yaml  main.py  pyproject.toml
.claude/: claude.md  settings.json
.claude/skills/01_qwen_setup_and_model_loading/: SKILL.md
.claude/skills/02_answer_tracing_and_logit_attribution/: SKILL.md
.claude/skills/03_ood_token_injection_and_activation_patching/: SKILL.md
.claude/skills/04_interactive_visualization_for_qwen/: SKILL.md
.claude/skills/05_activation_datasets_and_sparse_models/: SKILL.md
experiments/: 01_clean_baseline.py  02_ood_comparison.py  03_activation_patching.py  04_corruption_sweep.py
pages/: 1_Model.py  2_Baseline.py  3_OOD.py  4_Patching.py  5_Sweep.py
scripts/: run_all.sh  run_baseline.sh  run_ood_comparison.sh  run_patching.sh
src/: AppConfig.py  Untitled.ipynb  __init__.py  app_state.py  attribution.py  config.py  config.yaml  constrained_decoding.py  model.py  ov_circuits.py  patching.py  test_ov_circuits.py  visualization.py  viz_interactive.py
src/connectomics/: app_state.py  attribution.py  config.py  model.py  patching.py  viz_interactive.py
src/pages/: 0_Model.py  1_Prompts.py  2_DLA.py  3_Attention.py  4_Targeted_Patching.py  5_Sweep.py  6_Logit_Lens.py  7_Patch_Screen.py
tests/: test_token_normalization.py  test_tokenization_edge_cases.py
