[project]
name = "llm-Analysis"
version = "0.2.0"
description = "Mechanistic interpretability of LLM computations under OOD token injection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformer-lens>=3.0.0b1",
    "circuitsvis>=1.43.2",
    "plotly>=5.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.10.0",
    "ipykernel>=6.29.0",
    "jaxtyping>=0.2.0",
    "pyyaml>=6.0",
    "streamlit>=1.55.0",
    "datasets>=4.6.1",
    "llguidance>=1.6.1",
]

[project.optional-dependencies]
sae = ["sae-lens>=3.0.0"]

[project.scripts]
llm-Analysis = "Analysis.cli:main"
